<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="Home"/>

    <item
        android:id="@+id/connections"
        android:icon="@drawable/ic_chat"
        android:title="Connections"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:title="Profile"/>
</menu>